# minicv

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  main.cpp
include/: algorithms.h  algorithms_impl.h  constants.h  core.h  mat.h  minicv.h  pch.h  utils.h
src/: algorithms.cpp  algorithms_impl.cpp  mat.cpp  utils.cpp
